// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`periodic events transactions modes always commit - use cds.context for db interaction 1`] = `
{
  "BEGIN": 6,
  "COMMIT": 5,
  "CREATE": 2,
  "DELETE": 1,
  "READ": 2,
  "UPDATE": 2,
}
`;

exports[`periodic events transactions modes always commit 1`] = `
{
  "BEGIN": 6,
  "COMMIT": 5,
  "CREATE": 2,
  "DELETE": 1,
  "READ": 2,
  "UPDATE": 2,
}
`;

exports[`periodic events transactions modes always rollback - use cds.context for db interaction 1`] = `
{
  "BEGIN": 6,
  "COMMIT": 4,
  "CREATE": 2,
  "DELETE": 1,
  "READ": 2,
  "ROLLBACK": 1,
  "UPDATE": 2,
}
`;

exports[`periodic events transactions modes always rollback 1`] = `
{
  "BEGIN": 6,
  "COMMIT": 4,
  "CREATE": 2,
  "DELETE": 1,
  "READ": 2,
  "ROLLBACK": 1,
  "UPDATE": 2,
}
`;

exports[`periodic events transactions modes no tx mode should commit if not exception 1`] = `
{
  "BEGIN": 6,
  "COMMIT": 5,
  "CREATE": 2,
  "DELETE": 1,
  "READ": 2,
  "UPDATE": 2,
}
`;
